home page changed

--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  
+  <!--Link for fonts in header-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet"> 
+  <!--Ends here-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
   <app-root></app-root>
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-
-  <script>
-    let curs=document.querySelector(".cursor");
-    document.addEventListener("mouseover",(e)=> {
-        let x=e.pageX;
-        let y=e.pageY;
-        curs.style.left=x-175+"px";
-        curs.style.top=(y-175)+"px";
-        curs.style.opacity="1"
-    } )
-</script>
 </body>
 </html>
